---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/runtime_boundaries/annotation_mismatch_error.flx
exit_code: 1

[ 1 of 18] Compiling  Add
[ 2 of 18] Compiling  Assert
[ 3 of 18] Compiling  Debug
[ 4 of 18] Compiling  Array
[ 5 of 18] Compiling  List
[ 6 of 18] Compiling  Either
[ 7 of 18] Compiling  Eq
[ 8 of 18] Compiling  IO
[ 9 of 18] Compiling  Math
[10 of 18] Compiling  Num
[11 of 18] Compiling  Numeric
[12 of 18] Compiling  Option
[13 of 18] Compiling  Ord
[14 of 18] Compiling  Primops
[15 of 18] Compiling  Semigroup
[16 of 18] Compiling  Show
[17 of 18] Compiling  String
• 1 error • tests/fixtures/semantic_types/runtime_boundaries/annotation_mismatch_error.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `inc`.

  tests/fixtures/semantic_types/runtime_boundaries/annotation_mismatch_error.flx:4:9
  |
1 | fn inc(x: Int) -> Int { x + 1 }
  | --------------------- `inc` expects `Int` as the 1st parameter
2 | 
3 | fn main() {
4 |     inc("oops")
  |         ^^^^^^
  |         ------ this argument has type `String`

Note:
  expected argument type: Int
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `Int` value as the 1st argument.
